--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,8 +8,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Install Python
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Install python 3
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
