--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,9 +17,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Install python 3
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
-          python-version: 3.10
+          python-version: "3.10"
       - name: install dependencies
         run: |
           python3 -m pip install -U pip setuptools setuptools-scm wheel
